--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastx-tui-plugin-example"
-version = "1.0.2"
+version = "0.1.0"
 description = "FastX-Tui插件示例，展示插件系统的基本功能和最佳实践"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -14,7 +14,17 @@ authors = [
 license = { file = "LICENSE" }
 dependencies = [
     "requests>=2.31.0",
+    "build>=1.2.2.post1",
+    "rich>=13.0.0"
 ]
+
+[build-system]
+requires = [ "setuptools>=61.0.0", "wheel>=0.37.0",]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = [ "example_business", "fastx_plugin",]
+
 keywords = ["fastx-tui", "plugin", "example"]
 classifiers = [
     "Programming Language :: Python :: 3",
