--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 /.venv/
+/.uv/
+/__pycache__/
+/build/
+/dist/
+
 /.idea/
 /.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+logs
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
