## 1. 插件版本自动更新机制 修改内容 ：
- 修改了 FastX-Tui-Plugin-Example 插件的 .github/workflows/bump-version.yml 工作流
- 修改了 FastX-Tui-Plugin-DEMFaultAnalyzer 插件的 .github/workflows/bump-version.yml 工作流
- 插件模板 {{cookiecutter.plugin_name}} 已包含相同的自动更新逻辑
实现效果 ：

- 当GitHub工作流触发版本升级时，会自动更新 pyproject.toml 中的版本号
- 同时会自动更新 fastx_tui_plugin.py 文件中的 PluginInfo 对象的 version 属性
- 所有修改会自动提交并推送，确保插件接口文件中的版本信息与项目配置一致
## 2. 动态获取插件评分和下载量
修改内容 ：

- 修改了 core/plugin_manager.py 文件中的 PluginRepository 类
- 增强了 get_plugin_info_from_github 方法，添加了GitHub API调用逻辑
实现效果 ：

- 从GitHub API获取仓库星级，并转换为0-5分制的评分
- 使用仓库forks_count作为下载量数据
- 当API调用失败时，会回退到插件中定义的默认值
- 在线插件浏览时，会显示动态获取的评分和下载量

所有任务已完成，现在总结一下修改内容。我已经完成了所有要求的修改：

1. 修改插件入口文件名称 ：

   - 将插件入口文件从 fastx_plugin.py 改为 fastx_tui_plugin.py
   - 更新了 core/plugin_manager.py 中的相关代码，包括插件发现、加载和安装逻辑
   - 修改了两个示例插件，为它们创建了新的入口文件
2. 解决多个插件运行问题 ：

   - 每个插件使用独立的 pyproject.toml 和 uv.lock 文件，确保依赖隔离
   - 使用 uv 管理项目依赖，提高依赖安装的一致性和速度
3. 简化插件开发步骤 ：

   - 在 core/operations.py 中添加了 create_plugin 方法，支持通过 cookiecutter 快速创建插件
   - 在插件管理界面中添加了"创建新插件"选项，用户可以通过界面快速创建插件
4. 开发 cookiecutter 模板 ：

   - 创建了 cookiecutter-fastx-tui-plugin-templates 模板目录
   - 包含 cookiecutter.json 配置文件
   - 提供了完整的插件模板，包括：
     - fastx_tui_plugin.py （插件入口文件）
     - pyproject.toml （项目配置，支持 uv）
     - .github/workflows/bump-version.yml （自动版本管理）
     - README.md （插件说明文档）

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,4 @@ Repository = "https://github.com/fastxteam/FastX-Tui-Plugin-Example.git"
 Issues = "https://github.com/fastxteam/FastX-Tui-Plugin-Example/issues"
 
 [tool.setuptools]
-py-modules = [ "example_business", "fastx_plugin",]
+py-modules = [ "example_business", "fastx_tui_plugin",]
