--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -128,7 +128,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add pyproject.toml fastx_tui_plugin.py
-          git commit -m "Bump version to v${{ steps.bump_version.outputs.new_version }}}"
+          git commit -m "Bump version to v${{ steps.bump_version.outputs.new_version }}"
           git push origin main
 
       - name: Create tag
